# my-agent-toolkit

./: .gitignore  CLAUDE.md  CUSTOM_PROVIDERS.md  CUSTOM_PROVIDER_VERIFICATION.md  IMPLEMENTATION_PLAN_CLI.md  Makefile  README.md  TOOLS_UI_IMPLEMENTATION.md  config.yaml  pyproject.toml  test_convo_e2e.py
src/agents/: __init__.py  client.py  constants.py
src/agents/convert_to_something/: README.md
src/agents/convo/: README.md  __init__.py  agent.py
src/agents/deepresearch/: README.md
src/agents/hello_agent/: README.md  __init__.py  agent.py
src/agents/prd_generator/: README.md
src/agents/router/: README.md  __init__.py  agent.py  engine.py  executor.py  models.py
src/api/: main.py
src/cli/: README.md  __init__.py  agent_invoker.py  chat_commands.py  chat_interface.py  file_handler.py  main.py  output_formatter.py
src/core/: __init__.py  agent.py  client.py  config_loader.py  constants.py  logger.py
src/core/db/: __init__.py  manager.py  schema.sql
src/core/memory/: __init__.py  service.py
src/core/tools/: __init__.py  base.py  executor.py  models.py  registry.py  safety.py
src/mcp/: README.md
src/skills/: README.md
src/tools/: __init__.py  bash_tool.py  file_edit_tool.py  file_list_tool.py  file_read_tool.py  file_write_tool.py  grep_tool.py
src/ui/: vite.config.ts
src/ui/src/: App.tsx  index.css
tests/: conftest.py  test_agent.py  test_agent_persistence.py  test_api.py  test_client.py  test_config_loader.py  test_convo.py  test_db_manager.py  test_hello_agent.py  test_memory_service.py  test_router.py  test_tool_integration.py
(+9 files in other folders)
